Modified paper structure + a few computations

--- a/backward_disentangling.tex
+++ b/backward_disentangling.tex
@@ -17,7 +17,7 @@
 \newtheorem{proposition}[theorem]{Proposition}
 \newtheorem{corollary}[theorem]{Corollary}
 
-\title{Backward variational inference for noisy nonlinear ICA}
+\title{Backward variational inference and application to noisy Independent Component Analysis}
 \date{}
 
 %\author[$\wr$]{Mathis Chagneux}
@@ -305,8 +305,191 @@
 
 \end{abstract}
 
+\section{Introduction}
 
-\section{Exact backward decomposition for ICA}
+\section{Latent data models and backward variational inference}
+Let $\parvec$ be a parameter lying in a $\Theta\subset \rset^q$ and consider a  \textit{state space model} where the hidden Markov chain  in $\rset^d$ is denoted by $(X_k)_{k\geqslant 0}$. The distribution of $X_0$ has density $\chi_\theta$ with respect to the Lebesgue measure $\mu$ and for all $0\leqslant k \leqslant n-1$, the conditional distribution of $X_{k+1} $ given $X_{0:k}$ has density $\hd{k+1;\parvec}(X_{k},\cdot)$, where $a_{u:v}$ is a short-hand notation for $(a_u,\ldots,a_v)$. 
+It is assumed that this state  is partially observed  through an observation process $(Y_k)_{0\leqslant k \leqslant n}$ taking values in $\rset^m$. 
+For all $0\leqslant k \leqslant n$, the distribution of $Y_k$ given $X_{0:n}$ depends on $X_k$ only and has density $\md{k;\parvec}(X_k,\cdot)$ with respect to the Lebesgue measure. 
+In this context, for any pair of indices $0\leqslant k_1 \leqslant k_2 \leqslant n$, we define the \textit{joint smoothing distribution} as the conditional law of $X_{k_1:k_2}$ given $Y_{0:n}$. 
+In this framework, the likelihood of the observations $\llh{n,\parvec}(Y_{0:n})$, which is  in general intractable, is
+$$
+\llh{n,\parvec}(Y_{0:n})  = \int \chi_\theta(x_0)\md{0;\parvec}(x_{0},Y_{0})\prod_{k=0}^{n-1}\qg{k;\parvec}(x_{k},x_{k+1})\mu(\rmd x_{0:n})\eqsp,
+$$
+ where, for all $0\leqslant k \leqslant n$ and all $\parvec\in\parspace$,
+\begin{equation}
+\label{eq:def:elln}
+\qg{k;\parvec}(x_{k},x_{k+1}) = \hd{k+1;\parvec}(x_{k}, x_{k+1})\md{k+1;\parvec}(x_{k+1},Y_{k+1})\eqsp.
+\end{equation}
+For all $x_k\in\mathbb{R}^d$, we also write $\uk{k,\theta}(x_k, \cdot)$ the kernel with density $\qg{k;\parvec}(x_{k},\cdot) $ with respect to the Lebesgue measure:
+$$
+\uk{k,\theta}(x_k, \rmd x_{k+ 1})  = \hd{k+1;\parvec}(x_{k}, x_{k+1})\md{k+1;\parvec}(x_{k+1},Y_{k+1})\mu(dx_{k+1})\eqsp.
+$$
+In a large variety of situations, the loglikelihood of the observations is not available explicitly and obtaining approximate maximum likelihood estimators is computationally intensive, in particular in high dimensional settings. Standard approaches  aim at computing \textit{smoothing expectations of additive functionals},  where $\af{0:n}$ is an \textit{additive functional}, \textit{i.e.} a function from $\rset^{d \times (n + 1)}$ to $\rset^{d'}$ satisfying:
+\begin{equation}
+\label{eq:additive:functional}
+\af{0:n}: x_{0:n} \mapsto \sum_{k=0}^{n-1}\addf{k}(x_{k},x_{k+1})\eqsp,
+\end{equation}
+where $\addf{k}:\rset^{d} \times \rset^{d}\to\rset^{d'}$.
+Such expectations are the keystones of many common inference problems in state space models. The joint smoothing distribution is defined as
+$$
+\post{0:n}^{\parvec} h = \llh{n,\parvec}(Y_{0:n})^{-1} \int \chi_\theta(x_0)\md{0;\parvec}(x_{0},Y_{0})\prod_{k=0}^{n-1}\qg{k;\parvec}(x_{k},x_{k+1})h(x_{0:n})\mu(\rmd x_{0:n})\eqsp.
+$$
+
+\begin{example}[EM algorithm.]
+\label{ex:em:algorithm}
+In the usual case when $\theta$ is unknown, the maximum likelihood estimator is $\widehat \parvec = \mathrm{argmax}_{\parvec\in\parspace}\eqsp\llh{n,\parvec}(Y_{0:n})$. Expectation Maximization based algorithms are appealing solutions to obtain an estimator of $\hat \parvec$.
+The pivotal concept of the EM algorithm is that the intermediate quantity defined by
+\begin{equation*}
+\parvec\mapsto Q(\parvec,\parvec') = \pE_{\parvec'}\left[\sum_{k=0}^{n-1} \log \qg{k;\parvec}(X_{k}, X_{k+1})\middle | Y_{0:n}\right] 
+\end{equation*}
+may be used as a surrogate for $\llh{n}(\parvec)$ in the maximization procedure,  where $\pE_{\parvec'}$ is the expectation under the joint distribution of the latent states and the observations when the model is parameterized by $\parvec'$. 
+\end{example}
+
+\textcolor{red}{Discuter ici les difficult\'es Monte Carlo en grande dimension en particulier num\'eriques : SMC/MCMC, Monte Carlo VAE...}
+In variational approaches, instead of trying to design Monte Carlo estimators of $\post{0:n}^{\parvec} h$ (or equivalently of the conditional distribution of the states given the observations), the conditional law of $X_{0:n}$ given $Y_{0:n}$ is approximated by choosing a candidate in a parametric family $\{ \post{0:n}^{\varphi}\}_{\varphi \in \Phi}$, where $\Phi$ is a parameter set. Parameters are then estimated by maximizing the ELBO defined as:
+$$
+\mathcal{L}(\parvec,\varphi) = \pE_{ \post{0:n}^{\varphi}}\left[\log \frac{p_\parvec(X_{0:n},Y_{0:n})}{ \post{0:n}^{\varphi}(X_{0:n})}\right] = \int \log \frac{p_\parvec(x_{0:n},Y_{0:n})}{ \post{0:n}^{\varphi}(x_{0:n})} \post{0:n}^{\varphi}(x_{0:n})\mu(\rmd x_{0:n})\eqsp.
+$$
+Most works in the literature focus on mean field approximations which means that the family $\{ \post{0:n}^{\varphi}\}_{\varphi \in \Phi}$ can be written as a product of independent distributions \textcolor{red}{Discuter ce point : alternatives propos\'ees en pratique et r\'esultats obtenus en particulier pour les s\'eries temporelles/les mod\`eles \`a donn\'ees latentes}. However, such an assumption fails to hold in standard hidden Markov models which may lead to poor result in the approximation of the posterior distribution of some states given the observations. In this paper, we propose another solution to provide a decomposition of   $ \post{0:n}^{\varphi}$ which accounts for the hidden Markov structure of $p_\parvec$. Under the assumptions of this paper, conditionally on $\{Y_{0:n}\}$, the backward chain $(X_n,\ldots,X_0)$ is a Markov chain with inhomogeneous Markov transition kernels. This leads us to introduce a variational family where each $\post{0:n}^{\varphi}$ is of the form:
+$$
+ \post{0:n}^{\varphi}(x_{0:n})=  \post{n}^{\varphi}(x_n)\prod_{k=0}^{n-1}q_{\varphi,k}(x_{k+1},x_k)\eqsp.
+$$
+The variational family parameterizes the backward kernel which naturally appears in the decomposition of the law of $X_{0:n}$ given $Y_{0:n}$. In the following, we write $Q_{\varphi,k}(x_{k+1}, \rmd x_k) = q_{\varphi,k}(x_{k+1},x_k) \mu(\rmd x_k)$. Note that $ \post{n}^{\varphi}$ is the marginal distribution of $ \post{0:n}^{\varphi}$ at time $n$ which therefore targets the filtering distribution at time $n$, i.e. the distribution of $X_n$ given $Y_{0:n}$.
+\textcolor{red}{Discuter le papier de Doucet, le fait que c'est naturel pour les HMM et que \c ca permet l'estimation en ligne : mais que ce n'est pas gratuit. Et ajouter qu'aucun r\'esultat sur la qualit\'e de l'approximation dans l'espace latent n'a \'et\'e obtenu \`a ce jour.}
+
+ %On the other hand, for a fixed record of observations $Y_{0:n}$, for all $0 \leq k \leq n-1$,   $ \post{k}^{\varphi}$ is the marginal distribution of $ \post{0:n}^{\varphi}$ at time $k$ which therefore targets the marginal smoothing distribution at time $k$, i.e. the distribution of $X_k$ given $Y_{0:n}$.
+
+\section{Control of the variational error for additive functionals}
+\textcolor{red}{Motiver les fonctionnelles additives et mentionner les r\'esultats connus en HMM.}
+\subsection{Control of the variational error}
+%In this section we propose an upper bound for the error $|\mathbb{E}_{q_\varphi}[\af{0:n}(X_{0:n})]-\mathbb{E}_\theta[\af{0:n}(X_{0:n})|Y_{0:n}]|$  when $\af{0:n}$ is an additive functional of the hidden states as in \eqref{eq:additive:functional}. %Following \cite{gloaguen2019pseudo} this control can be obtained in a broader framework than the HMM setting. Let $(\Xset_n, \Xfd_n)_{n \in \nset}$ be a sequence of general state spaces and let, for all $n \in \nset$ and all $\theta$, $\uk{n,\theta}$ defined on  $\Xset_n \times \Xfd_{n + 1}$ be bounded kernels in the sense that $\sup_{x \in \Xset_n} \uk{n,\theta}(x, \Xset_{n + 1}) < \infty$. We will assume a dominated model where each kernel $\uk{n,\theta}$ has a kernel density $\ud{n,\theta}$ with respect to some $\sigma$-finite reference measure $\mu_{n + 1}$ on $\Xfd_{n + 1}$. Finally, let $\chi$ be some bounded measure on $\Xfd_0$. In the following, we denote state-space product sets and $\sigma$-fields by $\Xset^n \eqdef \Xset_0 \times \cdots \times \Xset_n$ and $\Xfd^n \eqdef \Xfd_0 \tensprod \cdots \tensprod \Xfd_n$, respectively, and consider probability measures  
+%\begin{equation} \label{eq:def:post}
+%\post{0:n}^\theta(\rmd x_{0:n}) \propto \chi(\rmd x_0) \prod_{m = 0}^{n - 1} \uk{m,\theta}(x_m, \rmd x_{m + 1}), \quad n \in \nset, 
+%\end{equation}
+%on these product spaces.\footnote{We will always use the standard convention $\prod_{\varnothing} = 1$, implying that $\post{0} \propto \chi$.}   the HMM setting discussed in this sectionIn the special case where each $\uk{n,\theta}$ can be decomposed as $\uk{n,\theta}(x_n, \rmd x_{n + 1}) = \md{n,\theta}(x_n) \, \hk_{n,\theta}(x_n, \rmd x_{n + 1})$ for some Markov kernel $\hk_{n,\theta}$ and some nonnegative potential function $\md{n,\theta}$, \eqref{eq:def:post} yields. 
+
+%\paragraph{Variational family. }
+%For all $n\in\nset$, without loss of generality, write $\post{0:n}^{\varphi}$ the joint smoothing distribution provided by the variational family. Then,
+%$$
+ %\post{0:n}^{\varphi}(x_{0:n})=  \post{n}^{\varphi}(x_n)\prod_{k=0}^{n-1}q_{\varphi,k}(x_{k+1},x_k)\eqsp.
+%$$
+%with the convention $\post{0:n}^{\varphi}(x_{n}) = \post{n}^{\varphi}(x_{n})$. 
+ %\textcolor{red}{Here $q_{\varphi,k+1}(dx_{k+1})$, $q_{\varphi,k}(dx_{k})$ and $q_{\varphi,n}(dx_0)$ are not really $ q_{\varphi,\ell}$ but the marginals  of $ \post{0:n}^{\varphi}$ ?}
+
+\begin{hypH}
+\label{assum:bias:bound}
+There exist functions $c_k$, $0\leqslant k \leqslant n$, such that for all $0\leqslant k \leqslant n$, $\parvec$, $\varphi$, all bounded measurable functions $h$ on $\mathbb{R}^d\times\mathbb{R}^d$, %and $x \in \Xset_k$,   
+%$$
+%\left|\int m_{\varphi,n}(x,x_{k+1}) h (x_{k+1})dx_{k+1}- \int\qg{k,\parvec}(x,x_{k+1}) h (x_{k+1})dx_{k+1}\right| \leqslant c_k(\parvec,\varphi) \| h_k \|_\infty. 
+%$$
+%The previous assumption should be replaced by
+$$
+\left|\post{k}^{\varphi}Q_{\varphi,k-1} h - \frac{\post{k-1}^{\varphi} \uk{k-1,\theta}h}{\post{k-1}^{\varphi} \uk{k-1,\theta}\1}\right| \leqslant c_k(\parvec,\varphi) \| h \|_\infty. 
+$$ 
+and for all bounded measurable functions $h$ on $\mathbb{R}^d$,
+$$
+\left|\post{0}^{\theta}h - \postmod{0} h\right|\leqslant c_0(\theta,\varphi)\|h\|_\infty\eqsp,
+$$
+where  $\post{0}^{\theta}$ is the filtering distribution at time $0$, i.e. $\post{0}^{\theta}h = \chi_\theta \md{0;\parvec}h/\chi_\theta \md{0;\parvec}\1$.
+\end{hypH}
+%\begin{remark}
+%In the linear and Gaussian case, $\qg{k,\parvec}(x,x_{k+1}) = \Psi_{Ax+b,\Sigma}(x_{k+1})\Psi_{Cx_{k+1}+d,\Omega}(Y_{k+1})$ where $\Psi_{\mu,\lambda}$ is the Gaussian probability function with mean $\mu$ and variance $\Lambda$. Assume that $q_{\varphi,k}$ is the backward kernel of a linear and Gaussian model with parameters $\tilde A$, $\tilde b$, $\tilde \Sigma$, $\tilde C$ $\tilde d$, $\tilde \Omega$. Therefore,
+%\begin{multline*}
+%m_{\varphi,k}(x_{k},x_{k+1}) =   \frac{\post{k+1}^{\varphi}(x_{k+1})q_{\varphi,k}(x_{k+1},x_k)}{\post{k}^{\varphi}(x_k)} =   \frac{\post{k+1}^{\varphi}(x_{k+1})\post{k}^{\varphi}(x_k)\Psi_{\tilde Ax_k+\tilde b,\Sigma}(x_{k+1})}{\post{k}^{\varphi}(x_k)\int \post{k}^{\varphi}(x)\Psi_{Ax+b,\Sigma}(x_{k+1})d x}\\
+%= \frac{\post{k+1}^{\varphi}(x_{k+1})\Psi_{\tilde Ax_k+\tilde b,\Sigma}(x_{k+1})}{\int \post{k}^{\varphi}(x)\Psi_{\tilde Ax+\tilde b,\tilde \Sigma}(x_{k+1})d x} = \frac{\Psi_{\mu_{k+1},\Sigma_{k+1}}(x_{k+1})\Psi_{\tilde Ax_k+\tilde b,\tilde \Sigma}(x_{k+1})}{\Psi_{\tilde A \mu_k+ \tilde b,\tilde\Sigma}(x_{k+1})}, 
+%\end{multline*}
+%where $\mu_k$ and $\Sigma_k$ are the mean and variances of the filtering distribution at time $k$ under the variational distribution. Therefore,
+%$$
+%\left|\int \left(m_{\varphi,n}(x,x_{n+1})-\qg{n,\parvec}(x,x_{n+1})\right) h (x_{n+1})dx_{n+1}\right| 
+%$$
+%\end{remark}
+%\textcolor{red}{
+%\begin{itemize}
+%\item In the case of HMM/ICA models, etc. the kernels depend on the observations. Then, the upper bound $c(\parvec,\varphi)$ is random and depend on the observations. This should be detailed in the specific case of HMM.
+%\item The joint probability distribution $\post{0:n}^{\varphi}$ can also be written:
+%$$
+% \post{0:n}^{\varphi}(x_{0:n})=  \post{0}^{\varphi}(x_0)\prod_{k=0}^{n-1}m_{\varphi,k}(x_{k},x_{k+1})\eqsp,
+%$$
+%where $m_{\varphi,k}(x_{k},x_{k+1}) =   \post{k+1}^{\varphi}(x_{k+1})q_{\varphi,k}(x_{k+1},x_k)/ \post{k}^{\varphi}(x_k)$. We could discuss other assumptions such as 
+%$$
+%\left|\int m_{\varphi,n}(x,x_{k+1}) h (x_{k+1})dx_{k+1}- \int\qg{k,\parvec}(x,x_{k+1}) h (x_{k+1})dx_{k+1}\right| \leqslant c_k(\parvec,\varphi) \| h_k \|_\infty. 
+%$$
+%But less useful in practice as we directly parameterize the backward variational kernel and not $ m_{\varphi,n}(x,x_{k+1}) $.
+%\end{itemize}}
+
+\begin{hypH}
+\label{assum:strong:mixing}
+There exist constants $0 < \udlow < \udup < \infty$ such that for all $k \in \nset$, $\theta\in\Theta$, $\varphi\in\Phi$ and $(x_k, x_{k + 1}) \in \mathbb{R}^d \times \mathbb{R}^d$, 
+$$
+    \udlow \leq \ud{k,\theta}(x_k, x_{k + 1}) \leq \udup
+$$ 
+and 
+$$
+    \udlow \leq  q_{\varphi,k}(x_{k+1}, x_{k}), \quad q_{\varphi,k}(x_{k+1}, x_{k}) \leq \udup. 
+$$ 
+\end{hypH}
+%Under these assumptions, define the mixing rate 
+%\begin{equation} \label{eq:def:rho}
+%    \rho \eqdef 1 - \frac{\udlow}{\udup}
+%\end{equation}
+
+
+\begin{proposition}
+\label{prop:bias}
+Assume that H\ref{assum:bias:bound} and H\ref{assum:strong:mixing} hold. Then, for all $n \in \nset$, $\parvec\in\Theta$, $\varphi\in\Phi$, and all additive functional $h_{0:n}$,  
+%    \begin{align*}
+%        \big| \postmod{0:n} h_n -  \post{0:n}^{\parvec} h_n \big| 
+%        &\leq 2 c(\parvec,\varphi) \frac{\udup}{\udlow^2} \sum_{k = 0}^{n - 1} \| \addf{k} \|_\infty \left( \sum_{m = 1}^{n - 1} \rho^{|k - m| - 1} + 1 \right) \\
+%        &\leq 2 c(\parvec,\varphi) n \frac{\udup}{\udlow^2} \left( 1 + \frac{1}{\rho} + \frac{2}{1 - \rho} \right) \sup_{0 \leq k \leq n - 1} \| \addf{k} \|_\infty\eqsp,
+%    \end{align*}
+$$
+        \big| \postmod{0:n} h_{0:n} -  \post{0:n}^{\parvec} h_{0:n} \big| 
+        \leq 2\frac{\sigma_+}{\sigma_-^2}\sum_{k=0}^{n-1}\left\| \addf{k}\right\|_\infty\left( c_0(\theta,\varphi) + \sum_{m=1}^n \rho^{|k-m|-1}c_m(\theta,\varphi)\right)\eqsp,%\upsilon\sup_{0 \leq k \leq n - 1}\!\!\!\! \| \addf{k} \|_\infty  c(\parvec,\varphi) n\eqsp.
+$$
+where $\rho = 1-\sigma_-/\sigma_+$.
+\end{proposition}
+
+\begin{proof}
+The proof is postponed to Appendix~\ref{sec:proof}.
+\end{proof}
+
+\subsection{Commments on assumption H\ref{assum:bias:bound} and H~\ref{assum:strong:mixing}}
+\label{sec:assumptions}
+%\textcolor{red}{Add here explicit computations of $c(\theta,\varphi)$ in the ICA case.}
+\begin{itemize}
+\item
+Consider first the linear and Gaussian case, i.e. we assume that for all $x_{k-1}$, $\hd{k;\parvec}(x_{k-1}, \cdot)$ is the Gaussian pdf with mean $A_{k,\theta} x_{k-1}$ and variance $R_{k,\theta}$  and that $\md{k;\parvec}(x_{k},\cdot)$ is the Gaussian pdf with mean $B_{k,\theta} x_k$ and variance $S_{k,\theta}$. In this setting, assume that $\phi_k^\varphi$ is the Gaussian pdf with mean $\mu_{k,\varphi}$ and variance $\Sigma_{k,\varphi}$ and that for all $x_k$, $q_{\varphi,k-1}(x_{k}, \cdot)$ is the Gaussian pdf with mean $A_{k,\varphi} x_k$ and variance $R_{k,\varphi}$. Define also $\mu_{k-1:k}^\varphi$  (resp. $\mu_{k-1:k}^{\varphi,\theta}$) the short-hand notation for the joint distribution $\post{k}^{\varphi}Q_{\varphi,k-1} $ (resp. $\post{k-1}^{\varphi} \uk{k-1,\theta}h/\post{k-1}^{\varphi} \uk{k-1,\theta}\1$).
+
+It is straightforward to obtain that $\mu_{k-1:k}^\varphi$ is a multivariate Gaussian distribution with mean and variance:
+$$
+\mathsf{M}_{k,\varphi} = \begin{pmatrix}A_{k,\varphi} \mu_{k,\varphi} \\ \mu_{k,\varphi}\end{pmatrix}\quad\mathrm{and}\quad \mathsf{V}_{k,\varphi} =\begin{pmatrix} A_{k,\varphi} \Sigma_{k,\varphi}A_{k,\varphi}^\top + R_{k,\theta}&  A_{k,\varphi} \Sigma_{k,\varphi}\\  \Sigma_{k,\varphi}A_{k,\varphi}^\top& \Sigma_{k,\varphi} \end{pmatrix}\,.
+$$
+On the other hand, $\mu_{k-1:k}^{\varphi,\theta}$ is also a multivariate Gaussian with mean $\mathsf{M}_{k,\varphi,\theta}$ and variance $ \mathsf{V}_{k,\varphi,\theta}$ which can be computed explicitly. In this case, for all bounded and measurable function $h$,
+$$
+\left|\post{k}^{\varphi}Q_{\varphi,k-1} h - \frac{\post{k-1}^{\varphi} \uk{k-1,\theta}h}{\post{k-1}^{\varphi} \uk{k-1,\theta}\1}\right| \leqslant 2 \left\|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\right\|_{\mathrm{tv}} \| h \|_\infty,
+$$ 
+where $\|\cdot\|_{\mathrm{tv}}$ is the total variation distance and . Therefore, we can choose $c_k(\theta,\varphi) = 2 \|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\|_{\mathrm{tv}}$. It remains to use the fact that $\mu_{k-1:k}^\varphi$  and $\mu_{k-1:k}^{\varphi,\theta}$ are Gaussian distributions and that $\|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\|_{\mathrm{tv}} \leqslant (\mathrm{KL}(\mu_{k-1:k}^\varphi \| \mu_{k-1:k}^{\varphi,\theta})/2)^{1/2}$ and that we have an explicit expression of the $\mathrm{KL}$ divergence between Gaussian  distributions which yields
+$$
+c_k(\theta,\varphi) \propto \left(\log \frac{\left| \mathsf{V}_{k,\varphi,\theta}\right|}{\left| \mathsf{V}_{k,\varphi}\right|} - d + \left(\mathsf{M}_{k,\varphi} - \mathsf{M}_{k,\varphi,\theta}\right)^\top\mathsf{V}_{k,\varphi,\theta}^{-1}\left(\mathsf{M}_{k,\varphi} - \mathsf{M}_{k,\varphi,\theta}\right) + \mathrm{Tr}\left( \mathsf{V}_{k,\varphi,\theta}^{-1}\mathsf{V}_{k,\varphi}\right)\right)^{-1/2}\eqsp,
+$$
+where $ \mathrm{Tr}$ is the Trace operator and $\propto$ means up to a multiplicative constant independent of $\theta$ and $\varphi$.
+\item Consider now that the variational model is sill linear and Gaussian while the true model involves nonlinearity. We assume that for all $x_{k-1}$, $\hd{k;\parvec}(x_{k-1}, \cdot)$ is the Gaussian pdf with mean $A_{k,\theta} x_{k-1}$ and variance $R_{k,\theta}$  and that $\md{k;\parvec}(x_{k},\cdot)$ is the Gaussian pdf with mean $f_\theta(x_k)$ and variance $S_{k,\theta}$, where $f_\theta$ is nonlinear. In this setting, assume that $\phi_k^\varphi$ is the Gaussian pdf with mean $\mu_{k,\varphi}$ and variance $\Sigma_{k,\varphi}$ and that for all $x_k$, $q_{\varphi,k-1}(x_{k}, \cdot)$ is the Gaussian pdf with mean $A_{k,\varphi} x_k$ and variance $R_{k,\varphi}$. \textcolor{red}{Ongoing} 
+\end{itemize}
+
+\section{Exact and approximate backward decomposition for ICA}
+\textcolor{red}{Introduce linear and nonlinear ICA in the same setting as above using the computations below.}
+
+\section{Numerical experiments}
+\subsection{Linear and Gausian state space model}
+\textcolor{red}{Comparaisons \`a Kalman/mean field.}
+\subsection{Noisy linear ICA}
+\textcolor{red}{Comparaisons \`a Kalman/mean field.} 
+\subsection{Noisy nonlinear ICA}
+\textcolor{red}{Comparaisons \`a l'algo de Hermanni.}
+
+\clearpage
+\newpage
 
 %We now want to frame the multi-object tracking challenge as the downstream task of the more general problem of "disentenglement". In general terms and departing from the specific field of computer vision, we view our observations as random variables that arise from a generating process involving hidden/latent random variables. In disentenglement research, these latent variables are assumed to decompose into independent components (which, in the deep learning community, would be refered to as disentangled "representations"). For multi-object tracking, our goal is to infer latent variables whose independent components are "object-centric" representations, ie. each of them separetely describes an individual object. Many works exist that constrain VAEs to provide disentengled latent variables (e.g. via a special form of regularization, see \cite{betavae}) but \cite{unidentifiability} showed that most of them are actually trying to solve an ill-posed problem which is essentially unidentifiable. On the contrary, the Independant Component Analysis (ICA) litterature provides many identifiability results. In brief, in the nonlinear case, identifiability is only guaranteed if signals exhibit some structure (e.g. temporal dependencies), or if the inference is conditioned on an additionally observed process, which was shown in \cite{iVAE} for the specific case of VAEs. More recently, \cite{hermanni2021} proved identifiability when hidden states follow linear but flexible dynamics via regime switching: this is currently the most general setup that is still backed by identifiability proofs. However, in practice, inference is made with strong assumptions on the variational family. For sequential data, this is in contrast to the most recent works on VAEs, like \cite{campbell2021online}, which introduce flexible variational families that factorize according to the original model. We therefore attempt to merge ideas from these works.
 
@@ -530,166 +713,9 @@ and the expectation that remains admits no closed-form. From \cite{johnson}, the
 
 where 
 
-\clearpage
-\newpage
 
-\section{Control of the variational error for additive functionals}
-Let $\parvec$ be a parameter lying in a $\Theta\subset \rset^q$ and consider a  \textit{state space model} where the hidden Markov chain  in $\rset^d$ is denoted by $(X_k)_{k\geqslant 0}$. The distribution of $X_0$ has density $\chi_\theta$ with respect to the Lebesgue measure $\mu$ and for all $0\leqslant k \leqslant n-1$, the conditional distribution of $X_{k+1} $ given $X_{0:k}$ has density $\hd{k+1;\parvec}(X_{k},\cdot)$, where $a_{u:v}$ is a short-hand notation for $(a_u,\ldots,a_v)$. 
-It is assumed that this state  is partially observed  through an observation process $(Y_k)_{0\leqslant k \leqslant n}$ taking values in $\rset^m$. 
-For all $0\leqslant k \leqslant n$, the distribution of $Y_k$ given $X_{0:n}$ depends on $X_k$ only and has density $\md{k;\parvec}(X_k,\cdot)$ with respect to the Lebesgue measure. 
-In this context, for any pair of indices $0\leqslant k_1 \leqslant k_2 \leqslant n$, we define the \textit{joint smoothing distribution} as the conditional law of $X_{k_1:k_2}$ given $Y_{0:n}$. 
-In this framework, the likelihood of the observations $\llh{n,\parvec}(Y_{0:n})$, which is  in general intractable, is
-$$
-\llh{n,\parvec}(Y_{0:n})  = \int \chi_\theta(x_0)\md{0;\parvec}(x_{0},Y_{0})\prod_{k=0}^{n-1}\qg{k;\parvec}(x_{k},x_{k+1})\mu(\rmd x_{0:n})\eqsp,
-$$
- where, for all $0\leqslant k \leqslant n$ and all $\parvec\in\parspace$,
-\begin{equation}
-\label{eq:def:elln}
-\qg{k;\parvec}(x_{k},x_{k+1}) = \hd{k+1;\parvec}(x_{k}, x_{k+1})\md{k+1;\parvec}(x_{k+1},Y_{k+1})\eqsp.
-\end{equation}
-For all $x_k\in\mathbb{R}^d$, we also write $\uk{k,\theta}(x_k, \cdot)$ the kernel with density $\qg{k;\parvec}(x_{k},\cdot) $ with respect to the Lebesgue measure:
-$$
-\uk{k,\theta}(x_k, \rmd x_{k+ 1})  = \hd{k+1;\parvec}(x_{k}, x_{k+1})\md{k+1;\parvec}(x_{k+1},Y_{k+1})\mu(dx_{k+1})\eqsp.
-$$
-In a large variety of situations, the loglikelihood of the observations is not available explicitly and obtaining approximate maximum likelihood estimators is computationally intensive, in particular in high dimensional settings. Standard approaches  aim at computing \textit{smoothing expectations of additive functionals},  where $\af{0:n}$ is an \textit{additive functional}, \textit{i.e.} a function from $\rset^{d \times (n + 1)}$ to $\rset^{d'}$ satisfying:
-\begin{equation}
-\label{eq:additive:functional}
-\af{0:n}: x_{0:n} \mapsto \sum_{k=0}^{n-1}\addf{k}(x_{k},x_{k+1})\eqsp,
-\end{equation}
-where $\addf{k}:\rset^{d} \times \rset^{d}\to\rset^{d'}$.
-Such expectations are the keystones of many common inference problems in state space models. The joint smoothing distribution is defined as
-$$
-\post{0:n}^{\parvec} h = \llh{n,\parvec}(Y_{0:n})^{-1} \int \chi_\theta(x_0)\md{0;\parvec}(x_{0},Y_{0})\prod_{k=0}^{n-1}\qg{k;\parvec}(x_{k},x_{k+1})h(x_{0:n})\mu(\rmd x_{0:n})\eqsp.
-$$
-
-\begin{example}[EM algorithm.]
-\label{ex:em:algorithm}
-In the usual case when $\theta$ is unknown, the maximum likelihood estimator is $\widehat \parvec = \mathrm{argmax}_{\parvec\in\parspace}\eqsp\llh{n,\parvec}(Y_{0:n})$. Expectation Maximization based algorithms are appealing solutions to obtain an estimator of $\hat \parvec$.
-The pivotal concept of the EM algorithm is that the intermediate quantity defined by
-\begin{equation*}
-\parvec\mapsto Q(\parvec,\parvec') = \pE_{\parvec'}\left[\sum_{k=0}^{n-1} \log \qg{k;\parvec}(X_{k}, X_{k+1})\middle | Y_{0:n}\right] 
-\end{equation*}
-may be used as a surrogate for $\llh{n}(\parvec)$ in the maximization procedure,  where $\pE_{\parvec'}$ is the expectation under the joint distribution of the latent states and the observations when the model is parameterized by $\parvec'$. 
-\end{example}
-
-\subsection{Variational backward decomposition}
-In variational approaches, instead of trying to design Monte Carlo estimators of $\post{0:n}^{\parvec} h$ (or equivalently of the conditional distribution of the states given the observations), the conditional law of $X_{0:n}$ given $Y_{0:n}$ is approximated by choosing a candidate in a parametric family $\{ \post{0:n}^{\varphi}\}_{\varphi \in \Phi}$, where $\Phi$ is a parameter set. Parameters are then estimated by maximizing the ELBO defined as:
-$$
-\mathcal{L}(\parvec,\varphi) = \pE_{ \post{0:n}^{\varphi}}\left[\log \frac{p_\parvec(X_{0:n},Y_{0:n})}{ \post{0:n}^{\varphi}(X_{0:n})}\right] = \int \log \frac{p_\parvec(x_{0:n},Y_{0:n})}{ \post{0:n}^{\varphi}(x_{0:n})} \post{0:n}^{\varphi}(x_{0:n})\mu(\rmd x_{0:n})\eqsp.
-$$
-Most works in the literature focus on mean field approximations which means that the family $\{ \post{0:n}^{\varphi}\}_{\varphi \in \Phi}$ can be written as a product of independent distributions. However, such an assumption fails to hold in standard hidden Markov models which may lead to poor result in the approximation of the posterior distribution of some states given the observations. In this paper, we propose another solution to provide a decomposition of   $ \post{0:n}^{\varphi}$ which accounts for the hidden Markov structure of $p_\parvec$. Under the assumptions of this paper, conditionally on $\{Y_{0:n}\}$, the backward chain $(X_n,\ldots,X_0)$ is a Markov chain with inhomogeneous Markov transition kernels. This leads us to introduce a variational family where each $\post{0:n}^{\varphi}$ is of the form:
-$$
- \post{0:n}^{\varphi}(x_{0:n})=  \post{n}^{\varphi}(x_n)\prod_{k=0}^{n-1}q_{\varphi,k}(x_{k+1},x_k)\eqsp.
-$$
-The variational family parameterizes the backward kernel which naturally appears in the decomposition of the law of $X_{0:n}$ given $Y_{0:n}$. In the following, we write $Q_{\varphi,k}(x_{k+1}, \rmd x_k) = q_{\varphi,k}(x_{k+1},x_k) \mu(\rmd x_k)$. Note that $ \post{n}^{\varphi}$ is the marginal distribution of $ \post{0:n}^{\varphi}$ at time $n$ which therefore targets the filtering distribution at time $n$, i.e. the distribution of $X_n$ given $Y_{0:n}$. %On the other hand, for a fixed record of observations $Y_{0:n}$, for all $0 \leq k \leq n-1$,   $ \post{k}^{\varphi}$ is the marginal distribution of $ \post{0:n}^{\varphi}$ at time $k$ which therefore targets the marginal smoothing distribution at time $k$, i.e. the distribution of $X_k$ given $Y_{0:n}$.
-
-\subsection{Control of the variational error}
-%In this section we propose an upper bound for the error $|\mathbb{E}_{q_\varphi}[\af{0:n}(X_{0:n})]-\mathbb{E}_\theta[\af{0:n}(X_{0:n})|Y_{0:n}]|$  when $\af{0:n}$ is an additive functional of the hidden states as in \eqref{eq:additive:functional}. %Following \cite{gloaguen2019pseudo} this control can be obtained in a broader framework than the HMM setting. Let $(\Xset_n, \Xfd_n)_{n \in \nset}$ be a sequence of general state spaces and let, for all $n \in \nset$ and all $\theta$, $\uk{n,\theta}$ defined on  $\Xset_n \times \Xfd_{n + 1}$ be bounded kernels in the sense that $\sup_{x \in \Xset_n} \uk{n,\theta}(x, \Xset_{n + 1}) < \infty$. We will assume a dominated model where each kernel $\uk{n,\theta}$ has a kernel density $\ud{n,\theta}$ with respect to some $\sigma$-finite reference measure $\mu_{n + 1}$ on $\Xfd_{n + 1}$. Finally, let $\chi$ be some bounded measure on $\Xfd_0$. In the following, we denote state-space product sets and $\sigma$-fields by $\Xset^n \eqdef \Xset_0 \times \cdots \times \Xset_n$ and $\Xfd^n \eqdef \Xfd_0 \tensprod \cdots \tensprod \Xfd_n$, respectively, and consider probability measures  
-%\begin{equation} \label{eq:def:post}
-%\post{0:n}^\theta(\rmd x_{0:n}) \propto \chi(\rmd x_0) \prod_{m = 0}^{n - 1} \uk{m,\theta}(x_m, \rmd x_{m + 1}), \quad n \in \nset, 
-%\end{equation}
-%on these product spaces.\footnote{We will always use the standard convention $\prod_{\varnothing} = 1$, implying that $\post{0} \propto \chi$.}   the HMM setting discussed in this sectionIn the special case where each $\uk{n,\theta}$ can be decomposed as $\uk{n,\theta}(x_n, \rmd x_{n + 1}) = \md{n,\theta}(x_n) \, \hk_{n,\theta}(x_n, \rmd x_{n + 1})$ for some Markov kernel $\hk_{n,\theta}$ and some nonnegative potential function $\md{n,\theta}$, \eqref{eq:def:post} yields. 
-
-%\paragraph{Variational family. }
-%For all $n\in\nset$, without loss of generality, write $\post{0:n}^{\varphi}$ the joint smoothing distribution provided by the variational family. Then,
-%$$
- %\post{0:n}^{\varphi}(x_{0:n})=  \post{n}^{\varphi}(x_n)\prod_{k=0}^{n-1}q_{\varphi,k}(x_{k+1},x_k)\eqsp.
-%$$
-%with the convention $\post{0:n}^{\varphi}(x_{n}) = \post{n}^{\varphi}(x_{n})$. 
- %\textcolor{red}{Here $q_{\varphi,k+1}(dx_{k+1})$, $q_{\varphi,k}(dx_{k})$ and $q_{\varphi,n}(dx_0)$ are not really $ q_{\varphi,\ell}$ but the marginals  of $ \post{0:n}^{\varphi}$ ?}
-
-\begin{hypH}
-\label{assum:bias:bound}
-There exist functions $c_k$, $0\leqslant k \leqslant n$, such that for all $0\leqslant k \leqslant n$, $\parvec$, $\varphi$, all bounded measurable functions $h$ on $\mathbb{R}^d\times\mathbb{R}^d$, %and $x \in \Xset_k$,   
-%$$
-%\left|\int m_{\varphi,n}(x,x_{k+1}) h (x_{k+1})dx_{k+1}- \int\qg{k,\parvec}(x,x_{k+1}) h (x_{k+1})dx_{k+1}\right| \leqslant c_k(\parvec,\varphi) \| h_k \|_\infty. 
-%$$
-%The previous assumption should be replaced by
-$$
-\left|\post{k}^{\varphi}Q_{\varphi,k-1} h - \frac{\post{k-1}^{\varphi} \uk{k-1,\theta}h}{\post{k-1}^{\varphi} \uk{k-1,\theta}\1}\right| \leqslant c_k(\parvec,\varphi) \| h \|_\infty. 
-$$ 
-and for all bounded measurable functions $h$ on $\mathbb{R}^d$,
-$$
-\left|\post{0}^{\theta}h - \postmod{0} h\right|\leqslant c_0(\theta,\varphi)\|h\|_\infty\eqsp,
-$$
-where  $\post{0}^{\theta}$ is the filtering distribution at time $0$, i.e. $\post{0}^{\theta}h = \chi_\theta \md{0;\parvec}h/\chi_\theta \md{0;\parvec}\1$.
-\end{hypH}
-%\begin{remark}
-%In the linear and Gaussian case, $\qg{k,\parvec}(x,x_{k+1}) = \Psi_{Ax+b,\Sigma}(x_{k+1})\Psi_{Cx_{k+1}+d,\Omega}(Y_{k+1})$ where $\Psi_{\mu,\lambda}$ is the Gaussian probability function with mean $\mu$ and variance $\Lambda$. Assume that $q_{\varphi,k}$ is the backward kernel of a linear and Gaussian model with parameters $\tilde A$, $\tilde b$, $\tilde \Sigma$, $\tilde C$ $\tilde d$, $\tilde \Omega$. Therefore,
-%\begin{multline*}
-%m_{\varphi,k}(x_{k},x_{k+1}) =   \frac{\post{k+1}^{\varphi}(x_{k+1})q_{\varphi,k}(x_{k+1},x_k)}{\post{k}^{\varphi}(x_k)} =   \frac{\post{k+1}^{\varphi}(x_{k+1})\post{k}^{\varphi}(x_k)\Psi_{\tilde Ax_k+\tilde b,\Sigma}(x_{k+1})}{\post{k}^{\varphi}(x_k)\int \post{k}^{\varphi}(x)\Psi_{Ax+b,\Sigma}(x_{k+1})d x}\\
-%= \frac{\post{k+1}^{\varphi}(x_{k+1})\Psi_{\tilde Ax_k+\tilde b,\Sigma}(x_{k+1})}{\int \post{k}^{\varphi}(x)\Psi_{\tilde Ax+\tilde b,\tilde \Sigma}(x_{k+1})d x} = \frac{\Psi_{\mu_{k+1},\Sigma_{k+1}}(x_{k+1})\Psi_{\tilde Ax_k+\tilde b,\tilde \Sigma}(x_{k+1})}{\Psi_{\tilde A \mu_k+ \tilde b,\tilde\Sigma}(x_{k+1})}, 
-%\end{multline*}
-%where $\mu_k$ and $\Sigma_k$ are the mean and variances of the filtering distribution at time $k$ under the variational distribution. Therefore,
-%$$
-%\left|\int \left(m_{\varphi,n}(x,x_{n+1})-\qg{n,\parvec}(x,x_{n+1})\right) h (x_{n+1})dx_{n+1}\right| 
-%$$
-%\end{remark}
-%\textcolor{red}{
-%\begin{itemize}
-%\item In the case of HMM/ICA models, etc. the kernels depend on the observations. Then, the upper bound $c(\parvec,\varphi)$ is random and depend on the observations. This should be detailed in the specific case of HMM.
-%\item The joint probability distribution $\post{0:n}^{\varphi}$ can also be written:
-%$$
-% \post{0:n}^{\varphi}(x_{0:n})=  \post{0}^{\varphi}(x_0)\prod_{k=0}^{n-1}m_{\varphi,k}(x_{k},x_{k+1})\eqsp,
-%$$
-%where $m_{\varphi,k}(x_{k},x_{k+1}) =   \post{k+1}^{\varphi}(x_{k+1})q_{\varphi,k}(x_{k+1},x_k)/ \post{k}^{\varphi}(x_k)$. We could discuss other assumptions such as 
-%$$
-%\left|\int m_{\varphi,n}(x,x_{k+1}) h (x_{k+1})dx_{k+1}- \int\qg{k,\parvec}(x,x_{k+1}) h (x_{k+1})dx_{k+1}\right| \leqslant c_k(\parvec,\varphi) \| h_k \|_\infty. 
-%$$
-%But less useful in practice as we directly parameterize the backward variational kernel and not $ m_{\varphi,n}(x,x_{k+1}) $.
-%\end{itemize}}
-
-\begin{hypH}
-\label{assum:strong:mixing}
-There exist constants $0 < \udlow < \udup < \infty$ such that for all $k \in \nset$, $\theta\in\Theta$, $\varphi\in\Phi$ and $(x_k, x_{k + 1}) \in \mathbb{R}^d \times \mathbb{R}^d$, 
-$$
-    \udlow \leq \ud{k,\theta}(x_k, x_{k + 1}) \leq \udup
-$$ 
-and 
-$$
-    \udlow \leq  q_{\varphi,k}(x_{k+1}, x_{k}), \quad q_{\varphi,k}(x_{k+1}, x_{k}) \leq \udup. 
-$$ 
-\end{hypH}
-%Under these assumptions, define the mixing rate 
-%\begin{equation} \label{eq:def:rho}
-%    \rho \eqdef 1 - \frac{\udlow}{\udup}
-%\end{equation}
-
-
-\begin{proposition}
-\label{prop:bias}
-Assume that H\ref{assum:bias:bound} and H\ref{assum:strong:mixing} hold. Then, for all $n \in \nset$, $\parvec\in\Theta$, $\varphi\in\Phi$, and all additive functional $h_{0:n}$,  
-%    \begin{align*}
-%        \big| \postmod{0:n} h_n -  \post{0:n}^{\parvec} h_n \big| 
-%        &\leq 2 c(\parvec,\varphi) \frac{\udup}{\udlow^2} \sum_{k = 0}^{n - 1} \| \addf{k} \|_\infty \left( \sum_{m = 1}^{n - 1} \rho^{|k - m| - 1} + 1 \right) \\
-%        &\leq 2 c(\parvec,\varphi) n \frac{\udup}{\udlow^2} \left( 1 + \frac{1}{\rho} + \frac{2}{1 - \rho} \right) \sup_{0 \leq k \leq n - 1} \| \addf{k} \|_\infty\eqsp,
-%    \end{align*}
-$$
-        \big| \postmod{0:n} h_{0:n} -  \post{0:n}^{\parvec} h_{0:n} \big| 
-        \leq 2\frac{\sigma_+}{\sigma_-^2}\sum_{k=0}^{n-1}\left\| \addf{k}\right\|_\infty\left( c_0(\theta,\varphi) + \sum_{m=1}^n \rho^{|k-m|-1}c_m(\theta,\varphi)\right)\eqsp,%\upsilon\sup_{0 \leq k \leq n - 1}\!\!\!\! \| \addf{k} \|_\infty  c(\parvec,\varphi) n\eqsp.
-$$
-where $\rho = 1-\sigma_-/\sigma_+$.
-\end{proposition}
-
-\begin{proof}
-The proof is postponed to Section~\ref{sec:assumptions}.
-\end{proof}
-
-\subsection{Commments on assumption H\ref{assum:bias:bound} and H~\ref{assum:strong:mixing}}
-\label{sec:assumptions}
-%\textcolor{red}{Add here explicit computations of $c(\theta,\varphi)$ in the ICA case.}
-\begin{itemize}
-\item
-Consider first the linear and Gaussian case, i.e. we assume that for all $x_k$, $\hd{k+1;\parvec}(x_{k}, \cdot)$ is the Gaussian pdf with mean $A_k^\theta x_k$ and variance $R_k^\theta$  and that $\md{k;\parvec}(x_{k},\cdot)$ is the Gaussian pdf with mean $B_k^\theta x_k$ and variance $S_k^\theta$. In this setting, assume that $\phi_k^\varphi$ is the Gaussian pdf with mean $\mu_k^\varphi$ and variance $\Sigma_k^\varphi$ and that for all $x_k$, $q_{\varphi,k-1}(x_{k}, \cdot)$ is the Gaussian pdf with mean $A_k^\varphi x_k$ and variance $R_k^\varphi$. In this case, for all bounded and measurable function $h$,
-$$
-\left|\post{k}^{\varphi}Q_{\varphi,k-1} h - \frac{\post{k-1}^{\varphi} \uk{k-1,\theta}h}{\post{k-1}^{\varphi} \uk{k-1,\theta}\1}\right| \leqslant 2 \left\|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\right\|_{\mathrm{tv}} \| h \|_\infty,
-$$ 
-where $\|\cdot\|_{\mathrm{tv}}$ is the total variation distance and $\mu_{k-1:k}^\varphi$  (resp. $\mu_{k-1:k}^{\varphi,\theta}$) is a short-hand notation for the joint distribution $\post{k}^{\varphi}Q_{\varphi,k-1} $ (resp. $\post{k-1}^{\varphi} \uk{k-1,\theta}h/\post{k-1}^{\varphi} \uk{k-1,\theta}\1$). Therefore, we can choose $c_k(\theta,\varphi) = 2 \left\|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\right\|_{\mathrm{tv}}$. It remains to use the fact that $\mu_{k-1:k}^\varphi$  and $\mu_{k-1:k}^{\varphi,\theta}$ are Gaussian pdf and that $ \left\|\mu_{k-1:k}^\varphi - \mu_{k-1:k}^{\varphi,\theta}\right\|_{\mathrm{tv}} \leqslant (\mathrm{KL}(\mu_{k-1:k}^\varphi \| \mu_{k-1:k}^{\varphi,\theta})/2)^{1/2}$ and that we have an explicit expression of the $\mathrm{KL}$ divergence between Gaussian  distributions.
-\item Nonlinear ICA ?
-\end{itemize}
-
-
-\subsection{Proof of Proposition~\ref{prop:bias}}
+\appendix
+\section{Proof of Proposition~\ref{prop:bias}}
 \label{sec:proof}
 Following \cite{gloaguen2019pseudo}, write 
 $$
